--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,16 @@
 
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "ForExpress.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/ForExpress.js"
+    }
+  ]
+}
